<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/back_white_r_18"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/daily_steps_plan_title"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_medium"
            android:gravity="center"
            android:text="@string/daily_steps_plan_subtitle"
            android:textColor="@color/black_text_color"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_daily_steps_goal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_white_r_18"
            android:ems="10"
            android:fontFamily="@font/open_sans_medium"
            android:gravity="center"
            android:hint="@string/daily_steps_plan_hint"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black_text_color"
            android:textColorHint="@color/black_text_color" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_exit"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_margin="20dp"
                android:background="@drawable/sel_b_big_menu"
                android:elevation="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_save"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_margin="20dp"
                android:background="@drawable/sel_b_allow"
                android:elevation="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white_f8"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>
