<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/back_white_r_18"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_gravity="center"
            android:src="@drawable/img_error" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/error_title"
            android:textColor="@color/orange"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_medium"
            android:gravity="center"
            android:text="@string/error_text"
            android:textColor="@color/black_text_color"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_allow"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/sel_b_allow"
            android:elevation="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/reconnect"
            android:textColor="@color/white_f8"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>