<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_close"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:elevation="10dp"
        android:layout_margin="20dp"
        android:padding="9dp"
        android:src="@drawable/icon_close"
        android:background="@drawable/sel_b_menu"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="134dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_home"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/sel_b_big_menu">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/icon_home"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="@string/home"
                android:textColor="@color/black_text_color"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_completed_tasks"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sel_b_big_menu">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/icon_tasks"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="@string/completed_tasks"
                android:textColor="@color/black_text_color"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_audio_player"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sel_b_big_menu">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/icon_audio"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="@string/audio_player"
                android:textColor="@color/black_text_color"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_privacy"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sel_b_big_menu">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/icon_privacy"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="Privacy policy"
                android:textColor="@color/black_text_color"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_test_date"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sel_b_big_menu">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/icon_tasks"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:text="@string/test_date_menu"
                android:textColor="@color/black_text_color"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>